2008-12-20 22:13-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Read objects/accessibility and oids
	maps if we are in a gui builder so that data is accessible.
	* Source/NSActionCell.m: Don't archive target/action if they
	have no values.
	* Source/NSMenu.m: Only archive as "_NSMainMenu" if it has
	no parent and is not owner by a popup.
	* Source/NSPopUpButtonCell.m: Archive the default menu item
	which will show when this popup is displayed.

2008-12-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-shouldChangeTextInRange:replacementString:):
	Fix a crash during undo/redo when a text storage is shared among
	multiple text views and some of these views are closed by
	recording the undo/redo operations for the text storage rather
	than the text view.

2008-12-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-sendEvent:): Attempt to perform key
	equivalents in the key window before the main menu as on OS X.

2008-12-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* All GNUmakefiles: removed GNUSTEP_CORE_SOFTWARE=YES and
	added PACKAGE_NAME=gnustep-gui.
	* GNUmakefile: Export PACKAGE_NAME to reduce chances of a problem
	if a GNUmakefile in a subdirectory is missing it.

2008-12-18  Nicola Pero <nicola.pero@meta-innovation.com>

	* All GNUmakefiles: added GNUSTEP_CORE_SOFTWARE=YES at the
	beginning.
	* GNUmakefile: Export GNUSTEP_CORE_SOFTWARE to reduce chances of a
	problem if a GNUmakefile in a subdirectory is missing it.

>>>>>>> .r27362
2008-12-17 21:20-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Remove change which resets the bounds
	in NSCustomView as it was not needed and caused issues in some
	cases.

2008-12-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: Restore priority in lookup for Editors
	error in last change pointed out by david Ayers.

2008-12-16 19:41-EST Gregory John Casamento <greg_casamento@yahoo.com>
