@@ -1,3 +1,10 @@
+2008-12-21  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/NSTextView.m (-draggingUpdated:): Avoid redundant call to
+	-scrollPoint: when scrolling diagonally.
+	* Source/NSTextView.m: Fix inconsistent naming of (private)
+	NSTextStorage category.
+
 2008-12-20 22:13-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Source/GSNibLoading.m: Read objects/accessibility and oids
